--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   }
 
   .btn-primary {
-    @apply bg-blue-600 text-white hover:bg-blue-700;
+    @apply bg-primary text-white hover:bg-primary-hover;
   }
 
   .btn-secondary {
